# flask-sendgrid

./: .gitignore  .travis.yml  HISTORY.rst  MANIFEST.in  README.md  README.rst  flask_sendgrid.py  requirements-test.txt  setup.cfg  setup.py  tests.py
tests/: test_extension.py
