[metadata]
description-file = README.md

[coverage:run]
branch = True
include = flask_sendgrid.py

[pytest]
pep8maxlinelength = 100

pep8ignore =
    docs/* ALL
    scripts/* ALL
    app.py ALL
    tests/* E501

flakes-ignore =
    ImportStarUsage
    ImportStarUsed
    docs/* ALL
    scripts/* ALL
    tests/*